fixed email overflow issue: email address should no longer overflow container on mobile devices

--- a/src/components/pages/Contact/style.css
+++ b/src/components/pages/Contact/style.css
@@ -3,3 +3,7 @@
     background-attachment: fixed;
     background-size: cover;
 } */
+
+.wrapThis {
+    overflow-wrap: break-word !important;
+}
